--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Documen</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <include src="./partials/header.html"></include>
   </body>
 </html>
