--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,9 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/choose-us.html"></include>
+    </main>
   </body>
 </html>
