--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
     <main>
       <include src="./partials/hero.html"></include>
       <include src="./partials/choose-us.html"></include>
+      <include src="./partials/about-us.html"></include>
+      <include src="./partials/our-advantages.html"></include>
     </main>
   </body>
 </html>
