--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       <include src="./partials/choose-us.html"></include>
       <include src="./partials/about-us.html"></include>
       <include src="./partials/our-advantages.html"></include>
+      <include src="./partials/drupal.html"></include>
     </main>
   </body>
 </html>
