added-our-partners-section

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       <include src="./partials/about-us.html"></include>
       <include src="./partials/our-advantages.html"></include>
       <include src="./partials/drupal.html"></include>
+      <include src="./partials/our-partners.html"></include>
     </main>
   </body>
 </html>
