--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       <include src="./partials/our-advantages.html"></include>
       <include src="./partials/drupal.html"></include>
       <include src="./partials/our-partners.html"></include>
+      <include src="./partials/charity.html"></include>
     </main>
   </body>
 </html>
