--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,6 @@
       <include src="./partials/our-partners.html"></include>
       <include src="./partials/charity.html"></include>
     </main>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
